<resources>
    <string name="app_name">Bildekviss</string>
    <string name="title_activity_test">TestAct</string>
    <string name="velkommen_til_bildekviss">Velkommen til bildekviss</string>
    <string name="start_kviss">Start Kviss</string>
    <string name="title_activity_database">Database</string>
    <string name="title_activity_add_images">AddImages</string>
    <string name="title_activity_settings">Settings</string>
    <string name="upload">Upload</string>
    <string name="enter_the_name">Enter the name</string>
    <string name="add_to_db">Add to DB</string>
    <string name="take_photo">Take Photo</string>
    <string name="todo">TODO</string>
</resources>
